--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^5.5.0"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.1"
   }
 }
